--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
             "autoprefixer": "^10.0.0",
             "framer-motion": "^12.23.11",
             "html2canvas": "^1.4.1",
-            "jspdf": "^3.0.1",
+            "jspdf": "^2.5.2",
+            "jspdf-autotable": "^3.8.4",
             "lucide-react": "^0.532.0",
             "postcss": "^8",
             "react": "^18.0.0",
